--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Welcome to Apollo Home page
+description: Apollo is a service that delivers predictions on forex markets to its user basis
