--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
-pandas
+pandas==0.24.2
 git+https://github.com/oanda/oandapy.git
-matplotlib
-sklearn
-psycopg2
-tqdm
-bs4
-statsmodels
-scipy
-lxml
-python-dotenv
+matplotlib==3.0.3
+scikit-learn==0.20.3
+tqdm==4.31.1
+bs4==0.0.1
+statsmodels==0.9.0
+scipy==1.2.1
+lxml==4.3.3
+python-dotenv==0.10.1
 pyyaml==3.13
 tabulate==0.8.2
 requests==2.20.0
