--- a/cronjob.yaml
+++ b/cronjob.yaml
@@ -3,7 +3,7 @@ kind: CronJob
 metadata:
   name: forex-cron
 spec:
-  schedule: "5 * * * *"
+  schedule: "0 * * * *"
   concurrencyPolicy: "Forbid"
   failedJobsHistoryLimit: 10
   jobTemplate:
@@ -15,5 +15,5 @@ spec:
             - name: forex-cron
               image: gcr.io/winter-return-223922/forex_update:latest
               command: ["python3"]
-              args: ["/home/apollo/src/trading.py -o"]
+              args: ["/home/apollo/src/trading.py", "-o"]
           restartPolicy: Never
