Prune and keys: - Prune after every build on MakeFile - Updated env variables on distro file

--- a/apollo/src/.env.distro
+++ b/apollo/src/.env.distro
@@ -2,6 +2,11 @@
 # This is a template of the environment variables needed
 
 #First we instantiate our environment variables
-export email_from=""
-export email_pass=""
-export email_members=""
+#First we instantiate our environment variables
+export email_from="[from@mail.com]"
+export email_pass="[email_pass]"
+export email_members="[want@email.com]"
+export token="[TRADING TOKEN]"
+export trading_url="https://api-fx[practice].oanda.com:443/v3/accounts/[ACCOUNT]/orders"
+export telegram_token="[TELEGRAM BOT TOKEN]"
+export telegram_chat_id="[-TELEGRAM CHATID]"
