--- a/apollo/src/.env.distro
+++ b/apollo/src/.env.distro
@@ -7,6 +7,6 @@ export email_from="[from@mail.com]"
 export email_pass="[email_pass]"
 export email_members="[want@email.com]"
 export token="[TRADING TOKEN]"
-export trading_url="https://api-fx[practice].oanda.com:443/v3/accounts/[ACCOUNT]/orders"
+export trading_url="https://api-fx[trade][practice].oanda.com:443/v3/accounts/[ACCOUNT]/orders"
 export telegram_token="[TELEGRAM BOT TOKEN]"
 export telegram_chat_id="[-TELEGRAM CHATID]"
