--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,14 +2,16 @@ name: CI
 
 on: [push]
 
-
-steps:
-- uses: actions/checkout@master
-- uses: actions/setup-python@v1
-  with:
-    python-version: '3.7.3' # Version range or exact version of a Python version to use, using semvers version range syntax.
-    architecture: 'x64' # (x64 or x86)
-- run: python apollo/apollo/src/trading.py -o
+jobs:
+  build:
+    runs-on: ubuntu-19.04
+    steps:
+      - uses: actions/checkout@master
+      - uses: actions/setup-python@v1
+        with:
+          python-version: '3.7.3' # Version range or exact version of a Python version to use, using semvers version range syntax.
+          architecture: 'x64' # (x64 or x86)
+      - run: python apollo/apollo/src/trading.py -o
 
 
 #jobs:
