se indica correr trading

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           architecture: x64
-      - run: python my_script.py
+      - run: python apollo/apollo/src/trading.py -o
 
 
 #jobs:
