--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,9 +17,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
           architecture: x64
         env:
-          email_from: prophetsfai@gmail.com
+          email_from: 'prophetsfai@gmail.com'
           email_pass: ${{ secrets.prophets_email_pass}}
-          email_members: deds15@gmail.com
+          email_members: 'deds15@gmail.com'
           token: ${{ secrets.oanda_test_token}}
           trading_url: ${{ secrets.oanda_test_url}}
           telegram_token: ${{ secrets.telegram_test_token}}
