--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,12 +10,11 @@ jobs:
         python-version: [ '2.x', '3.x', 'pypy3' ]
     name: Python ${{ matrix.python-version }} sample
     steps:
-      - uses: actions/checkout@master
-      - name: Setup python
-        uses: actions/setup-python@v1
-        with:
-          python-version: ${{ matrix.python-version }}
-          architecture: x64
+    - uses: actions/checkout@master
+    - uses: actions/setup-python@v1
+    with:
+      python-version: '3.7.3' # Version range or exact version of a Python version to use, using semvers version range syntax.
+      architecture: 'x64' # (x64 or x86)
         env:
           email_from: prophetsfai@gmail.com
           email_pass: ${{ secrets.prophets_email_pass}}
