--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,13 @@ steps:
   with:
     python-version: '3.7.3' # Version range or exact version of a Python version to use, using semvers version range syntax.
     architecture: 'x64' # (x64 or x86)
-- run: python /apollo/apollo/src/trading.py
+- name: Install dependencies
+  run: |
+    python -m pip install --upgrade pip
+    pip install -r requirements.txt
+- name: Run code
+  run: |    
+    python /apollo/apollo/src/trading.py
 
 
 #jobs:
