--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
      - uses: actions/checkout@master
      - uses: actions/setup-python@v1
        with:
-         python-version: '3.7.3' # Version range or exact version of a Python version to use, using semvers version range syntax.
+         python-version: '3.7.x' # Version range or exact version of a Python version to use, using semvers version range syntax.
          architecture: 'x64' # (x64 or x86)
      - name: Install dependencies
        run: |
