--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,13 +11,22 @@ jobs:
        with:
          python-version: '3.7.x' # Version range or exact version of a Python version to use, using semvers version range syntax.
          architecture: 'x64' # (x64 or x86)
+       env:
+        email_from: prophetsfai@gmail.com
+        email_pass: ${{ secrets.prophets_email_pass}}
+        email_members: deds15@gmail.com
+        token: ${{ secrets.oanda_test_token}}
+        trading_url: ${{ secrets.oanda_test_url}}
+        telegram_token: ${{ secrets.telegram_test_token}}
+        telegram_chat_id: ${{ secrets.telegram_test_chat_id}}
      - name: Install dependencies
        run: |
          python -m pip install --upgrade pip
          pip install -r requirements.txt
      - name: Run code
-       run: |    
-         python /apollo/apollo/src/trading.py
+       run: |
+         cd ~/apollo/apollo/
+         python src/trading.py
 
 
 #jobs:
