--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-     - uses: actions/checkout@testing_pipeline
+     #- uses: actions/checkout@master
      - uses: actions/setup-python@v1
        with:
          python-version: '3.7.x' # Version range or exact version of a Python version to use, using semvers version range syntax.
