--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,13 +24,13 @@ jobs:
        run: |
          python -m pip install --upgrade pip
          pip install -r requirements.txt
-     - name: Google Cloud Platform (GCP) CLI - gcloud
-     - uses: actions-hub/gcloud@master
-       env:
-        PROJECT_ID: ${{ secrets.PROJECT_ID }}
-        APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
-       with:
-          args: info
+     #- name: Google Cloud Platform (GCP) CLI - gcloud
+     #- uses: actions-hub/gcloud@master
+       #env:
+        #PROJECT_ID: ${{ secrets.PROJECT_ID }}
+        #APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+       #with:
+          #args: info
      - name: Run code
        run: |
          cd apollo/
