--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,12 +6,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-     - uses: actions/checkout@master
-     - uses: actions/setup-python@v1
-       with:
-         python-version: '3.7.x' # Version range or exact version of a Python version to use, using semvers version range syntax.
-         architecture: 'x64' # (x64 or x86)
-       env:
+    - uses: actions/checkout@master
+    - uses: actions/setup-python@v1
+      with:
+        python-version: '3.7.x' # Version range or exact version of a Python version to use, using semvers version range syntax.
+        architecture: 'x64' # (x64 or x86)
+      env:
         email_from: prophetsfai@gmail.com
         email_pass: ${{ secrets.prophets_email_pass}}
         email_members: deds15@gmail.com
@@ -20,21 +20,26 @@ jobs:
         telegram_token: ${{ secrets.telegram_test_token}}
         telegram_chat_id: ${{ secrets.telegram_test_chat_id}}
         json_google_account: ${{ secrets.json_google_account}}
-     - name: Install dependencies
-       run: |
-         python -m pip install --upgrade pip
-         pip install -r requirements.txt
-     - name: Google Cloud Platform (GCP) CLI - gcloud
-       uses: actions-hub/gcloud@master
-       env:
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: Google Cloud Platform (GCP) CLI - gcloud
+      uses: actions-hub/gcloud@master
+      env:
         PROJECT_ID: ${{ secrets.PROJECT_ID }}
         APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
-       with:
-        args: info
-     - name: Run code
-       run: |
-         cd apollo/
-         python src/trading.py
+      with:
+        args: |
+          gsutil cp 'gs://forex_models/models/gb*'  apollo/src/assets/models/
+          gsutil cp -r -m 'gs://forex_models/models/variables'  apollo/src/assets/
+       
+    - name: Run code
+      run: |
+        cd apollo/
+        python src/trading.py
 
 
 #jobs:
