--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       with:
         args: |
           gsutil cp 'gs://forex_models/models/gb*'  apollo/src/assets/models/
-          gsutil cp -r -m 'gs://forex_models/models/variables'  apollo/src/assets/
+          gsutil cp 'gs://forex_models/models/variables'  apollo/src/assets/
        
     - name: Run code
       run: |
