--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,8 @@ jobs:
         telegram_chat_id: ${{ secrets.telegram_test_chat_id}}
         json_google_account: ${{ secrets.json_google_account}}
       run: |
-        wget https://downloads.wkhtmltopdf.org/0.12/0.12.5/wkhtmltox_0.12.5-1.bionic_amd64.deb && sudo apt install wkhtmltox_0.12.5-1.bionic_amd64.deb
+        wget https://downloads.wkhtmltopdf.org/0.12/0.12.5/wkhtmltox_0.12.5-1.bionic_amd64.deb && \
+        dpkg -i wkhtmltox_0.12.5-1.bionic_amd64.deb && \
+        apt-get install -f
         cd apollo/
         python src/trading.py
