--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       with:
         python-version: '3.7.x' # Version range or exact version of a Python version to use, using semvers version range syntax.
         architecture: 'x64' # (x64 or x86)
-
+  
     - name: Google Cloud Platform (GCP) CLI - gcloud
       uses: actions-hub/gcloud@master
       env:
@@ -22,6 +22,11 @@ jobs:
           info
           gsutil cp 'gs://forex_models/models/gb*'  apollo/src/assets/models/
           gsutil cp -r 'gs://forex_models/models/variables'  apollo/src/assets/
+    - name: Install htmltopdf
+      run: |
+        wget https://downloads.wkhtmltopdf.org/0.12/0.12.5/wkhtmltox_0.12.5-1.bionic_amd64.deb && \
+        dpkg -i wkhtmltox_0.12.5-1.bionic_amd64.deb && \
+        apt-get install -f
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -37,8 +42,5 @@ jobs:
         telegram_chat_id: ${{ secrets.telegram_test_chat_id}}
         json_google_account: ${{ secrets.json_google_account}}
       run: |
-        wget https://downloads.wkhtmltopdf.org/0.12/0.12.5/wkhtmltox_0.12.5-1.bionic_amd64.deb && \
-        dpkg -i wkhtmltox_0.12.5-1.bionic_amd64.deb && \
-        apt-get install -f
         cd apollo/
         python src/trading.py
