--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,8 @@ jobs:
     - name: Install htmltopdf
       run: |
         wget https://downloads.wkhtmltopdf.org/0.12/0.12.5/wkhtmltox_0.12.5-1.bionic_amd64.deb && \
-        dpkg -i wkhtmltox_0.12.5-1.bionic_amd64.deb && \
-        apt-get install -f
+        sudo dpkg -i wkhtmltox_0.12.5-1.bionic_amd64.deb && \
+        sudo apt-get install -f
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
