--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install htmltopdf
       run: |
         wget https://downloads.wkhtmltopdf.org/0.12/0.12.5/wkhtmltox_0.12.5-1.bionic_amd64.deb && \
-        cp wkhtmltox_0.12.5-1.bionic_amd64.deb /var/cache/apt/archives/ && \        
+        sudo cp wkhtmltox_0.12.5-1.bionic_amd64.deb /var/cache/apt/archives/ && \        
         sudo apt-get install -f
     - name: Install dependencies
       run: |
