--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,9 @@ jobs:
     - name: Install htmltopdf
       run: |
         wget https://downloads.wkhtmltopdf.org/0.12/0.12.5/wkhtmltox_0.12.5-1.bionic_amd64.deb && \
-        sudo cp wkhtmltox_0.12.5-1.bionic_amd64.deb /var/cache/apt/archives/ && \        
+        sudo apt-get -y install xfonts-75dpi && \
+        sudo apt-get -y install xfonts-base && \
+        sudo dpkg -i wkhtmltox_0.12.5-1.bionic_amd64.deb && \
         sudo apt-get install -f
     - name: Install dependencies
       run: |
