se añade creacion de orden

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,4 +45,4 @@ jobs:
         json_google_account: ${{ secrets.json_google_account}}
       run: |
         cd apollo/
-        python src/trading.py
+        python src/trading.py -o
