se añade deploy  a workflow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,7 +1,7 @@
 name: CI
 
-on: [push]
-
+on:
+  pull_request:
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -46,3 +46,9 @@ jobs:
       run: |
         cd apollo/
         python src/trading.py -o
+    - name: Update code on server
+      uses: maddox/actions/ssh@master
+      with:
+        args: |
+          cd apollo && git pull
+          secrets: [${{ secrets.APOLLO_KEY}}, ${{ secrets.APOLLO_HOST}},${{ secrets.APOLLO_USER}}]
