--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       uses: maddox/actions/ssh@master
       env:
         PRIVATE_KEY: ${{ secrets.APOLLO_KEY }}
-        HOST: 35.188.203.73
+        HOST: ${{ secrets.APOLLO_HOST }}
         USER: ${{ secrets.APOLLO_USER }}
       with:
         args: |
