se añaden variables de entorno faltantes

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -44,6 +44,8 @@ jobs:
         telegram_token: ${{ secrets.telegram_test_token}}
         telegram_chat_id: ${{ secrets.telegram_test_chat_id}}
         json_google_account: ${{ secrets.json_google_account}}
+        initial_pip: 2
+        pip_limit: 7000
       run: |
         cd apollo/
         python src/trading.py -o
