se añade en el test la ejecución de la cuenta demo

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -50,4 +50,4 @@ jobs:
         pip_limit: 7000
       run: |
         cd apollo/
-        python src/trading.py -o
+        python src/trading.py -o -p
