--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,7 +25,7 @@ jobs:
           gsutil cp -r 'gs://forex_models/models/variables'  apollo/src/assets/
     - name: Install htmltopdf
       run: |
-        wget https://downloads.wkhtmltopdf.org/0.12/0.12.5/wkhtmltox_0.12.5-1.bionic_amd64.deb && \
+        wget https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6-1/wkhtmltox_0.12.6-1.bionic_amd64.deb && \
         sudo apt-get -y install xfonts-75dpi && \
         sudo apt-get -y install xfonts-base && \
         sudo dpkg -i wkhtmltox_0.12.5-1.bionic_amd64.deb && \
