--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         args: |
           info
-          gsutil cp -m 'gs://forex_models/models/gb*'  apollo/src/assets/models_1h/
+          gsutil cp 'gs://forex_models/models/gb*'  apollo/src/assets/models_1h/
           gsutil cp -r -m 'gs://forex_models/models/variables/'  apollo/src/assets/models_1h/variables/
 
           gsutil cp 'gs://forex_models/models_4h/'  apollo/src/assets/models_4h/
