--- a/apollo/src/.env.distro
+++ b/apollo/src/.env.distro
@@ -2,11 +2,16 @@
 # This is a template of the environment variables needed
 
 #First we instantiate our environment variables
-#First we instantiate our environment variables
+
 export email_from="[from@mail.com]"
 export email_pass="[email_pass]"
 export email_members="[want@email.com]"
 export token="[TRADING TOKEN]"
-export trading_url="https://api-fx[trade][practice].oanda.com:443/v3/accounts/[ACCOUNT]/orders"
+export trading_url_="https://api-fx[trade][practice].oanda.com:443/v3/accounts/[ACCOUNT]/orders"
 export telegram_token="[TELEGRAM BOT TOKEN]"
 export telegram_chat_id="[-TELEGRAM CHATID]"
+
+
+# PIPS EN OPERACIÓN AL MISMO TIEMPO Y PIP INICIAL
+export pip_limit=0000
+export initial_pip=0
