--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
+cython
+numpy==1.18.1
 pandas==0.24.2
 git+https://github.com/oanda/oandapy.git
-matplotlib==3.0.3
+matplotlib==3.1.3
 scikit-learn==0.21.3
 tqdm==4.31.1
 bs4==0.0.1
 statsmodels==0.9.0
-scipy==1.2.1
+scipy==1.4.1
 lxml==4.3.3
 python-dotenv==0.10.1
 pyyaml==5.1.1
@@ -17,9 +19,6 @@ telegram-send==0.20
 imgkit==1.0.1
 wkhtmltopdf==0.2
 pandas-market-calendars==1.1
-Keras==2.3.0
-tensorflow==1.15.2
+tensorflow==2.3
+Keras==2.2.5
 xgboost==0.90
-cloudstorage==0.10.0
-google-cloud-storage==1.21.0
-rook
