--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt   
+        pip install -r requirements.txt --no-cache-dir
     - name: Run code
       env:
         email_from: prophetsfai@gmail.com
