--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,11 +34,11 @@ jobs:
         sudo dpkg -i wkhtmltox_0.12.6-1.bionic_amd64.deb && \
         sudo apt-get install -f
 
-    #- name: Install dependencies
-      #run: |
-        #python -m pip install --upgrade pip
-        #pip install -r requirements.txt --no-cache-dir
-#
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt --no-cache-dir
+
     #- name: Install database
       #uses: harmon758/postgresql-action@v1
       #env:
