se inicia postgres

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -61,7 +61,7 @@ jobs:
         initial_pip: 6
         pip_limit: 20000
       run: |
-      
+        service postgresql start
         psql -U $db_user -d $db_name -f $db_name.sql
         cd apollo/
         python src/main.py -o --model-version=models_1h --instrument=USD_JPY --account=1h
