se cambia a action original

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,9 +21,9 @@ jobs:
       with:
         args: |
           info
-          gsutil cp 'gs://forex_models/models/gb*'  apollo/src/assets/models_1h/
-          gsutil cp -r 'gs://forex_models/models/variables'  apollo/src/assets/models_1h/
-          gsutil cp -r 'gs://forex_models/models_4h'  apollo/src/assets/models_4h/
+          gsutil -m cp 'gs://forex_models/models/gb*'  apollo/src/assets/models_1h/
+          gsutil -m cp -r 'gs://forex_models/models/variables'  apollo/src/assets/models_1h/
+          gsutil -m cp -r 'gs://forex_models/models_4h'  apollo/src/assets/models_4h/
     - name: Install htmltopdf
       run: |
         wget https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6-1/wkhtmltox_0.12.6-1.bionic_amd64.deb && \
@@ -37,7 +37,7 @@ jobs:
         pip install -r requirements.txt --no-cache-dir
     
     - name: Install database
-      uses: danielweller-swp/postgresql-action@v2
+      uses: harmon758/postgresql-action@v1
       env:
         db_user: ${{secrets.db_user}}
         db_pwd: ${{secrets.db_pwd}}
@@ -48,7 +48,6 @@ jobs:
         postgresql db: ${{secrets.db_name}}
         postgresql user: ${{secrets.db_user}}
         postgresql password: ${{secrets.db_pwd}}
-        postgresql init scripts: $db_name.sql
     
     - name: Run code
       env:
