--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,6 +6,15 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:12
+        ports:
+        - 5432:5432
+        env:
+          POSTGRES_USER: ${{secrets.db_user}}
+          POSTGRES_PASSWORD: ${{secrets.db_pwd}}
+
     steps:
     - uses: actions/checkout@master
     - uses: actions/setup-python@v1
@@ -35,20 +44,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt --no-cache-dir
-    
-    - name: Install database
-      uses: harmon758/postgresql-action@v1
+
+    - name: setup databases
       env:
-        db_user: ${{secrets.db_user}}
-        db_pwd: ${{secrets.db_pwd}}
-        db_host: ${{secrets.db_host}}
-        db_name: ${{secrets.db_name}}
-      with:
-        postgresql version: '12'
-        postgresql db: ${{secrets.db_name}}
-        postgresql user: ${{secrets.db_user}}
-        postgresql password: ${{secrets.db_pwd}}
-    
+        POSTGRES_PASSWORD: postgres
+        POSTGRES_USER: postgres
+      run: |
+        psql -U postgres -d trading -f apollo/trading.sql
+
     - name: Run code
       env:
         email_from: prophetsfai@gmail.com
@@ -65,5 +68,4 @@ jobs:
         pip_limit: 20000
       run: |
         cd apollo/
-        psql -U $db_user -d $db_name -f $db_name.sql
         python src/main.py -o --model-version=models_1h --instrument=USD_JPY --account=1h
