--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,8 +49,8 @@ jobs:
       env:
         POSTGRES_PASSWORD: postgres
         POSTGRES_USER: postgres
-      run: |
-        psql -U postgres -d trading -f apollo/trading.sql
+      #run: |
+        #psql -U postgres -d trading -f apollo/trading.sql
 
     - name: Run code
       env:
