--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,10 +49,10 @@ jobs:
         sudo apt-get -y install xfonts-base && \
         sudo dpkg -i wkhtmltox_0.12.6-1.bionic_amd64.deb && \
         sudo apt-get install -f
-    - name: Install dependencies
+    - name: Install dependencies # --no-cache-dirs
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt --no-cache-dirs
+        pip install -r requirements.txt
 
     - name: Run code
       env:
