--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,7 +49,7 @@ jobs:
         sudo apt-get -y install xfonts-base && \
         sudo dpkg -i wkhtmltox_0.12.6-1.bionic_amd64.deb && \
         sudo apt-get install -f
-    - name: Install dependencies # --no-cache-dirs
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
@@ -66,6 +66,7 @@ jobs:
         json_google_account: ${{ secrets.json_google_account}}
         token_demo: ${{ secrets.oanda_test_token}}
         trading_url_1h: ${{ secrets.oanda_test_url}}
+        PGPASSWORD: postgres
         initial_pip: 6
         pip_limit: 20000
       run: |
