--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,5 +18,5 @@ jobs:
         USER: ${{ secrets.APOLLO_USER }}
       with:
         args: |
-          cd apollo
+          cd sandbox
           git pull
