--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -72,6 +72,7 @@ jobs:
         pip_limit: 20000
       run: |
         psql -h localhost -U postgres -f trading.sql
-        cd apollo/
-        python src/saveHistory/saveHistoryRun.py --user=postgres --password=postgres --host=localhost --name=postgres
+        cd apollo/src/saveHistory/
+        python saveHistoryRun.py --user=postgres --password=postgres --host=localhost --name=postgres
+        cd ...
         python src/main.py -o -s --model-version=models_4h --instrument=USD_JPY --account=1h
