--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -71,8 +71,6 @@ jobs:
         initial_pip: 6
         pip_limit: 20000
       run: |
-        psql -h localhost -U postgres -f trading.sql
-        cd apollo/src/saveHistory/
-        python saveHistoryRun.py --user=postgres --password=postgres --host=localhost --name=postgres
-        cd ...
+        psql -h localhost -U postgres -f db.sql
+        cd apollo/
         python src/main.py -o -s --model-version=models_4h --instrument=USD_JPY --account=1h
