--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -71,6 +71,6 @@ jobs:
         initial_pip: 6
         pip_limit: 20000
       run: |
-        psql -h localhost -U postgres -f db.sql
+        psql -h localhost -U postgres -f trading.sql
         cd apollo/
         python src/main.py -o -s --model-version=models_4h --instrument=USD_JPY --account=1h
