--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,26 @@
 cython
-numpy==1.18.1
-pandas==0.24.2
 git+https://github.com/oanda/oandapy.git
-matplotlib==3.1.3
-scikit-learn==0.21.3
-tqdm==4.31.1
 bs4==0.0.1
-statsmodels==0.9.0
-scipy==1.4.1
+imgkit==1.0.1
+Keras==2.2.4
 lxml==4.3.3
+matplotlib==3.0.3
+numpy==1.16.1
+pandas==1.0.1
+pandas-market-calendars==1.1
+psycopg2==2.8.4
 python-dotenv==0.10.1
-pyyaml==5.1.1
-tabulate==0.8.2
 requests==2.20.0
+scikit-learn==0.20.2
+scipy==1.2.1
+SQLAlchemy==1.3.16
+statsmodels==0.10.0
+tabulate==0.8.2
+telegram-send==0.24
+tensorflow==1.13.1
+tensorflow-estimator==1.13.0
+tqdm==4.31.0
 ujson==1.35
 v20==3.0.25.0
-telegram-send==0.20
-imgkit==1.0.1
 wkhtmltopdf==0.2
-pandas-market-calendars==1.1
-SQLAlchemy==1.3.19
-tensorflow==2.3
-Keras==2.2.5
 xgboost==0.90
-psycopg2==2.7.6.1
