--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,51 @@
-cython
-git+https://github.com/oanda/oandapy.git
+appdirs==1.4.4
+beautifulsoup4==4.9.2
 bs4==0.0.1
+certifi==2020.6.20
+cffi==1.14.3
+chardet==3.0.4
+colorama==0.4.3
+cryptography==3.1.1
+cycler==0.10.0
+Cython==0.29.21
+decorator==4.4.2
+h5py==2.10.0
+idna==2.10
 imgkit==1.0.1
 Keras==2.2.4
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+kiwisolver==1.2.0
 lxml==4.3.3
 matplotlib==3.0.3
 numpy==1.16.1
+oandapy==0.1
 pandas==1.0.1
-pandas-market-calendars==1.1
-psycopg2==2.8.4
+pandas-market-calendars==1.6.0
+patsy==0.5.1
+psycopg2-binary==2.8.4
+pycparser==2.20
+pyparsing==2.4.7
+python-dateutil==2.8.1
 python-dotenv==0.10.1
+python-telegram-bot==12.8
+pytz==2018.9
+PyYAML==5.3.1
 requests==2.24.0
 scikit-learn==0.20.2
 scipy==1.2.1
+six==1.15.0
+soupsieve==2.0.1
 SQLAlchemy==1.3.16
 statsmodels==0.10.0
 tabulate==0.8.2
 telegram-send==0.24
-tensorflow==2.3.1
+toolz==0.11.1
+tornado==6.0.4
 tqdm==4.31.0
+trading-calendars==1.11.11
 ujson==1.35
+urllib3==1.25.10
 v20==3.0.25.0
 wkhtmltopdf==0.2
 xgboost==0.90
