house-keeping & Stop Loss: - New clearer structure - SL check every hour for trades of 3 hours or more

--- a/.gitignore
+++ b/.gitignore
@@ -118,4 +118,6 @@ apollo/USDJPY_predictions.html
 *config.yaml
 *cronjob.yaml
 *.png
-apollo/lightning.py
+lightning.py
+USDJPY_predictions*
+scaler*
