fix descarga de assets

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,9 +40,9 @@ jobs:
       with:
         args: |
           info
-          gsutil -m cp 'gs://forex_models/models/gb*'  apollo/src/assets/models_1h/
-          gsutil -m cp -r 'gs://forex_models/models/variables'  apollo/src/assets/models_1h/
-          gsutil -m cp -r 'gs://forex_models/models_4h'  apollo/src/assets/
+          gsutil -m cp 'gs://forex_models/models/gb*'  apollo/assets/models_1h/
+          gsutil -m cp -r 'gs://forex_models/models/variables'  apollo/assets/models_1h/
+          gsutil -m cp -r 'gs://forex_models/models_4h'  apollo/assets/
     - name: Install htmltopdf
       run: |
         wget https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6-1/wkhtmltox_0.12.6-1.bionic_amd64.deb && \
